hydroflow/tests/compile-fail/surface_flow_props_cumul_warn_cumul.stderr
error: `lattice_fold` should have exactly 0 generic type arguments, actually has 1.
 --> tests/compile-fail/surface_flow_props_cumul_warn_cumul.rs:7:31
  |
7 |             -> lattice_fold::<'static, SetUnionHashSet<_>>()
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `lattice_fold` should have exactly 0 generic type arguments, actually has 1.
 --> tests/compile-fail/surface_flow_props_cumul_warn_cumul.rs:8:31
  |
8 |             -> lattice_fold::<'static, SetUnionHashSet<_>>()
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected 1 argument(s), found 0
 --> tests/compile-fail/surface_flow_props_cumul_warn_cumul.rs:7:16
  |
7 |             -> lattice_fold::<'static, SetUnionHashSet<_>>()
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected 1 argument(s), found 0
 --> tests/compile-fail/surface_flow_props_cumul_warn_cumul.rs:8:16
  |
8 |             -> lattice_fold::<'static, SetUnionHashSet<_>>()
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: warning test
  --> tests/compile-fail/surface_flow_props_cumul_warn_cumul.rs:14:5
   |
14 |     compile_error!("warning test");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `SetUnionHashSet`, `SetUnionSingletonSet`, `SetUnion`
 --> tests/compile-fail/surface_flow_props_cumul_warn_cumul.rs:1:38
  |
1 | use hydroflow::lattices::set_union::{SetUnionHashSet, SetUnionSingletonSet, SetUnion};
  |                                      ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `hydroflow::lattices::collections::SingletonSet`
 --> tests/compile-fail/surface_flow_props_cumul_warn_cumul.rs:2:5
  |
2 | use hydroflow::lattices::collections::SingletonSet;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
